--- a/DemoApp/app/src/main/AndroidManifest.xml
+++ b/DemoApp/app/src/main/AndroidManifest.xml
@@ -8,9 +8,11 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application
-        android:name="com.igaworks.IgawDefaultApplication"
+    <!--
+    <application>
+        android:name="com.gamearena.demoapp.MainActivity"
     </application>
+    -->
 
     <application
         android:allowBackup="true"
