--- a/DemoApp/app/build.gradle
+++ b/DemoApp/app/build.gradle
@@ -28,8 +28,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-core:10.0.1'
     //compile 'com.google.android.gms:play-services-auth:9.8.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
-    testCompile 'junit:junit:4.12'
+
+        testCompile 'junit:junit:4.12'
 }
 
 apply plugin: 'com.google.gms.google-services'
