--- a/DemoApp/app/src/main/AndroidManifest.xml
+++ b/DemoApp/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+
+
     <!--
     <application>
         android:name="com.gamearena.demoapp.MainActivity"
@@ -24,6 +26,8 @@
 
         <meta-data android:name="igaworks_app_key" android:value="959582032" />
         <meta-data android:name="igaworks_hash_key" android:value="ae9ea9221e614898" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -32,6 +36,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+
     </application>
 
 </manifest>
