--- a/DemoApp/app/src/main/AndroidManifest.xml
+++ b/DemoApp/app/src/main/AndroidManifest.xml
@@ -8,15 +8,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
-
-    <!--
-    <application>
-        android:name="com.gamearena.demoapp.MainActivity"
-    </application>
-    -->
-
     <application
+        android:name="com.igaworks.IgawDefaultApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -26,8 +19,7 @@
 
         <meta-data android:name="igaworks_app_key" android:value="959582032" />
         <meta-data android:name="igaworks_hash_key" android:value="ae9ea9221e614898" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -41,7 +33,18 @@
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
+<!--
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+-->
     </application>
 
 </manifest>
